--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-    hello
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim"
-        crossorigin="anonymous"></script>
-</body>
+<html lang="en" style="padding:0;margin:0;height:100%;width:100%;">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ServerPapers</title>
+    <script type="module" crossorigin src="/assets/index-3f97f515.js"></script>
+    <link rel="stylesheet" href="/assets/index-37cd7934.css">
+  </head>
+  <body style="padding:0;margin:0;height:100%;width:100%;">
+    <div id="app" style="padding:0;margin:0;height:100%;width:100%;"></div>
+    
+  </body>
 </html>
